--- a/index.html
+++ b/index.html
@@ -38,18 +38,28 @@
       from { opacity: 0; } to { opacity: 1; }
     }
     .tag-btn {
-      padding: 8px 16px;
-      border: 1.5px solid #6a5acd;
+      padding: 9px 18px;
       border-radius: 20px;
-      background: #eee;
+      border: 1.5px solid var(--tg-theme-link-color, #6a5acd);
+      background: var(--tg-theme-secondary-bg-color, #edeaff);
+      color: var(--tg-theme-text-color, #4a4a8e);
       cursor: pointer;
-      margin: 4px;
-      font-size: 14px;
+      font-size: 15px;
+      transition: background 0.18s, color 0.18s, border-color 0.18s, box-shadow 0.15s;
+      margin: 2px 0;
+      box-shadow: 0 2px 6px rgba(40,40,60,0.08);
     }
     .tag-btn.selected {
-      background: #6a5acd;
-      color: white;
+      background: var(--tg-theme-button-color, #6a5acd);
+      color: var(--tg-theme-button-text-color, #fff);
+      border-color: var(--tg-theme-link-color, #fff176);
+      box-shadow: 0 3px 18px rgba(100,100,200,0.12);
     }
+    .tag-btn:hover, .tag-btn:focus-visible {
+      filter: brightness(1.08);
+      outline: none;
+    }
+
     .group { margin-top: 10px; }
     #previewList p { margin: 8px 0; }
   </style>
